--- a/analogous.html
+++ b/analogous.html
@@ -42,7 +42,7 @@
             color: #FF0045;
     }
         nav ul{
-            padding:1rem 0;
+            background-color: #00FF8B;
         }
         nav li{
             font-size: 1.999rem;
